--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   },
   "homepage": "https://github.com/mhitmhit/MyBox#readme",
   "dependencies": {
-    "lite-server": "^2.3.0"
+    "bootstrap": "^4.0.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "lite-server": "^2.3.0",
+    "popper.js": "^1.12.9"
   }
 }
