--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "bootstrap": "^4.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
-    "lite-server": "^2.3.0",
     "popper.js": "^1.12.9"
+  },
+  "devDependencies": {
+    "lite-server": "^2.3.0"
   }
 }
